; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-scmi.c_acpi_smbus_cmi_query_methods.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-scmi.c_acpi_smbus_cmi_query_methods.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_buffer = type { i32, i8* }
%struct.acpi_smbus_cmi = type { i32 }

@ACPI_SINGLE_NAME = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i8**)* @acpi_smbus_cmi_query_methods to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_smbus_cmi_query_methods(i32 %0, i32 %1, i8* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca [5 x i8], align 1
  %10 = alloca %struct.acpi_buffer, align 8
  %11 = alloca %struct.acpi_smbus_cmi*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8** %3, i8*** %8, align 8
  %13 = getelementptr inbounds %struct.acpi_buffer, %struct.acpi_buffer* %10, i32 0, i32 0
  store i32 5, i32* %13, align 8
  %14 = getelementptr inbounds %struct.acpi_buffer, %struct.acpi_buffer* %10, i32 0, i32 1
  %15 = getelementptr inbounds [5 x i8], [5 x i8]* %9, i64 0, i64 0
  store i8* %15, i8** %14, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = bitcast i8* %16 to %struct.acpi_smbus_cmi*
  store %struct.acpi_smbus_cmi* %17, %struct.acpi_smbus_cmi** %11, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @ACPI_SINGLE_NAME, align 4
  %20 = call i32 @acpi_get_name(i32 %18, i32 %19, %struct.acpi_buffer* %10)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = call i64 @ACPI_SUCCESS(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %4
  %25 = load %struct.acpi_smbus_cmi*, %struct.acpi_smbus_cmi** %11, align 8
  %26 = getelementptr inbounds [5 x i8], [5 x i8]* %9, i64 0, i64 0
  %27 = call i32 @acpi_smbus_cmi_add_cap(%struct.acpi_smbus_cmi* %25, i8* %26)
  br label %28

28:                                               ; preds = %24, %4
  %29 = load i32, i32* @AE_OK, align 4
  ret i32 %29
}

declare dso_local i32 @acpi_get_name(i32, i32, %struct.acpi_buffer*) #1

declare dso_local i64 @ACPI_SUCCESS(i32) #1

declare dso_local i32 @acpi_smbus_cmi_add_cap(%struct.acpi_smbus_cmi*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
